// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groups-side-bar Renders \`groups-side-bar\` with custom data 1`] = `
<div>
  <aside
    class="side-bar secondary v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open theme--light"
    style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 250px;"
  >
    <div
      class="side-bar__brand ma-0 secondary lighten-1"
    >
      <app-logo-stub
        class="logo"
      />
      <logged-users-count-stub
        badgecolor="primary"
      />
      <app-version-stub
        class="version"
      />
    </div>
    <section
      class="side-bar__links"
    >
      <c-draggable-list-field-stub
        class="groups-panel"
        component="v-expansion-panel"
        component-data="[object Object]"
        disabled="true"
        draggable=".groups-panel__item--public"
        value="[object Object],[object Object]"
      >
        <groups-side-bar-group-stub
          class="groups-panel__item--public"
          group="[object Object]"
        />
        <groups-side-bar-group-stub
          class="groups-panel__item--public"
          group="[object Object]"
        />
      </c-draggable-list-field-stub>
      <hr
        class="v-divider theme--light"
      />
      <groups-side-bar-playlists-stub />
    </section>
    <groups-settings-button-stub
      buttonprops="[object Object]"
      tooltipright="true"
      wrapperprops="[object Object]"
    />
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-overlay v-overlay--active"
        style="display: none;"
      >
        <button
          class="primary v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Submit
          </div>
        </button>
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Cancel
          </div>
        </button>
      </div>
    </transition-stub>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-overlay v-overlay--active content-overlay"
      style="display: none;"
    />
  </transition-stub>
</div>
`;

exports[`groups-side-bar Renders \`groups-side-bar\` with default data 1`] = `
<div>
  <aside
    class="side-bar secondary v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile theme--light"
    style="height: 100%; margin-top: 0px; transform: translateX(-250px); width: 250px;"
  >
    <div
      class="side-bar__brand ma-0 secondary lighten-1"
    >
      <app-logo-stub
        class="logo"
      />
      <logged-users-count-stub
        badgecolor="primary"
      />
      <app-version-stub
        class="version"
      />
    </div>
    <section
      class="side-bar__links"
    >
      <!---->
      <hr
        class="v-divider theme--light"
      />
      <groups-side-bar-playlists-stub />
    </section>
    <groups-settings-button-stub
      buttonprops="[object Object]"
      tooltipright="true"
      wrapperprops="[object Object]"
    />
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-overlay v-overlay--active"
        style="display: none;"
      >
        <button
          class="primary v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Submit
          </div>
        </button>
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Cancel
          </div>
        </button>
      </div>
    </transition-stub>
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-overlay v-overlay--active content-overlay"
      style="display: none;"
    />
  </transition-stub>
</div>
`;
